<resources>
    <string name="app_name">RUAutomation</string>

    <string name="coffee_price">$1.99</string>

    <string name="pancake_price">$3.50</string>

    <string name="apple_price">$0.99</string>

    <string name="ice_coffee_price">$2.50</string>

    <string name="soda_price">$0.99</string>

    <string name="sub_price">$4.99</string>

    <string name="hot_dog_price">$2.50</string>

    <string name="burger_price">$3.00</string>

    <string name="beer_price">$2.50</string>

    <string name="steak_price">$16.00</string>

    <string name="turkey_price">$14.00</string>

    <string name="ice_cream_price">$2.00</string>

    <string name="order">Order</string>

    <string name="total_price">Total Price: </string>

    <string name="total_price_price">$0.00</string>

    <string name="your_order">Your Order</string>

    <string name="tables">Tables</string>


    <string name="actual_order"> </string>

    // Home Screen Buttons
    <string name="Menu">Menu</string>
    <string name="Employee">Employee</string>
    <string name="Customer">Customer</string>
    <string name="Career">Career</string>

    // Employee Home Screen
    <string name="Chef">Chef</string>
    <string name="Server">Server</string>
    <string name="Manager">Manager</string>
    <string name="Hostess">Hostess</string>
    <string name="Busboy">Busboy</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="order_01">Order 01</string>
    <string name="order_02">Order 02</string>
    <string name="order_06">Order 06</string>
    <string name="order_03">Order 03</string>
    <string name="order_04">order 04</string>
    <string name="order_05">Order 05</string>
    <string name="order_complete">Order Complete</string>
    <string name="select_to_view_order_from_queue">Select to View Order From Queue</string>
    <string name="order_11">Order 11</string>
    <string name="order_12">Order 12</string>
    <string name="order_10">Order 10</string>
    <string name="order_09">Order 09</string>
    <string name="order_08">Order 08</string>
    <string name="order_07">Order 07</string>

    // Customer Home Screen

    // Career Home Screen


</resources>
