<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="7">


    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:text="@string/Employee" />

    <Button
        android:id="@+id/HostessHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:text="@string/Hostess" />

    <Button
        android:id="@+id/BusboyHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:text="@string/Busboy" />

    <Button
        android:id="@+id/buttonCustomerHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:text="@string/Menu" />

    <Button
        android:id="@+id/buttonWaiterHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:text="Waiter" />

    <Button
        android:id="@+id/buttonCareerHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:text="@string/Career" />

    <Button
        android:id="@+id/ChefHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:text="@string/Chef" />

</GridLayout>