<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:columnCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ord1btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_01"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="75dp" />

        <Button
            android:id="@+id/ord2btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_02"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="75dp" />

        <Button
            android:id="@+id/ord3btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_03"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/ord4btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_04"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/ord5btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_05"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="222dp" />

        <Button
            android:id="@+id/ord6btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_06"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="222dp" />

        <Button
            android:id="@+id/ord7btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_07"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="294dp" />

        <Button
            android:id="@+id/ord8btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_08"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="294dp" />

        <Button
            android:id="@+id/ord9btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_09"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="365dp" />

        <Button
            android:id="@+id/ord10btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_10"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="365dp" />

        <Button
            android:id="@+id/ord11btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_11"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/ord12btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/order_12"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_to_view_order_from_queue"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orderComplete"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/order_complete"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/orderViewItems"
        android:layout_width="200dp"
        android:layout_height="694dp"
        android:addStatesFromChildren="false"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toStartOf="@+id/orderViewCount"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/orderViewCount"
        android:layout_width="200dp"
        android:layout_height="694dp"
        android:addStatesFromChildren="false"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>